# lenia_feedback

./: CLAUDE.md  README.md  __init__.py  client.py  core.py  example_optimize.py  example_tracking.py  example_viz.py  pyproject.toml  requirements.txt  server.py  setup.py
lenia_field/: __init__.py  client.py  config_manager.py  core.py  optimizer.py  presets.py  server.py  simulation.py
lenia_field/config/: default.yaml
lenia_field/config/presets/: optimized.yaml
lenia_field/debug/: test_dynamics.py
tests/: conftest.py  test_client.py  test_core.py  test_integration.py  test_optimizer.py  test_presets.py  test_server.py  test_simulation.py
